타이틀 내용 수정

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- banner -->
       <div class="top-banner">
         <div class="top-banner__content">
-          <p class="top-banner__title bold">
+          <p c"top-banner__title bold">
             <!-- 띄어쓰기 포함 최대17자 -->
             프론트엔드를 대표하는
             <br />
